syntax = "proto3";

package protolca.commons;

option java_package = "org.openlca.proto.generated";
option java_outer_classname = "CommonsProto";
option java_multiple_files = true;
option csharp_namespace = "ProtoLCA";
option go_package = ".;protolca";

// This enumeration type is added for compatibility with the @type
// attribute of the openLCA JSON-LD format. In the proto messages
// we limit its usage to instances of CategorizedEntity and Ref
// while it is allowed for every type in the JSON-LD format. Thus,
// you should use ignoringUnknownFields flag when parsing openLCA
// JSON-LD messages with the generated proto parsers.
enum EntityType {
  Undefined = 0;
  Actor = 1;
  Category = 2;
  Currency = 3;
  DQSystem = 4;
  Flow = 5;
  FlowProperty = 6;
  ImpactCategory = 7;
  ImpactMethod = 8;
  Location = 9;
  Parameter = 10;
  Process = 11;
  ProductSystem = 12;
  Project = 13;
  SocialIndicator = 14;
  Source = 15;
  UnitGroup = 16;
}
